--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -23,7 +23,7 @@
   display: flex;
   align-items: center;
   text-decoration: none;
-  color: inherit;
+  color: $textColor-Light;
   @include TextHeadingMedium;
 
   .nav__link__inner {
@@ -50,6 +50,7 @@
 
   &--active {
     color: $primaryColor;
+    font-weight: 700;
 
     .icon--fill {
       display: block;
@@ -63,10 +64,32 @@
 
 .app--dark {
   .nav__link {
+    color: $textColor-Dark;
+
+    &--active {
+      color: $primaryColor;
+    }
+
     &:hover {
       .nav__link__inner {
         background-color: $cardColor-Dark;
       }
     }
+  }
+}
+
+@media only screen and(max-height: 730px) {
+  .nav__link[href="/lists"]{
+    display: none;
+  } 
+
+  .nav__link[href="/bookmarks"]{
+    display: none;
+  } 
+}
+
+@media only screen and(max-height: 600px) {
+  .nav{
+    margin-bottom: 30px;
   }
 }
