--- a/src/Components/OptionsModal/OptionsModal.scss
+++ b/src/Components/OptionsModal/OptionsModal.scss
@@ -1,10 +1,15 @@
 @import "../../Scss/Variables.scss";
 
 .options{
-  display: none;
+  display: block;
+
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.2s ease;
 
   &--open{
-    display: block;
+    opacity: 1;
+    pointer-events: all;
   }
 }
 
