--- a/src/App.scss
+++ b/src/App.scss
@@ -38,23 +38,6 @@ img {
   display: block;
 }
 
-.main {
-  flex-grow: 1;
-  border-left: 1px solid $strokeColor-Light;
-  border-right: 1px solid $strokeColor-Light;
-  overflow: auto;
-
-  &::-webkit-scrollbar {
-    width: 0;
-  }
-}
-
-.app--dark {
-  .main {
-    border-color: $strokeColor-Dark;
-  }
-}
-
 #root {
   width: 100%;
   height: 100%;
@@ -82,5 +65,60 @@ img {
     height: 100%;
     margin: 0 auto;
     padding: 0 20px;
+  }
+}
+
+.main {
+  width: 695px;
+  min-width: 600px;
+  flex-grow: 1;
+  border-left: 1px solid $strokeColor-Light;
+  border-right: 1px solid $strokeColor-Light;
+  overflow: auto;
+
+  &::-webkit-scrollbar {
+    width: 0;
+  }
+}
+
+.app--dark {
+  .main {
+    border-color: $strokeColor-Dark;
+  }
+}
+
+@media only screen and(max-width: 960px) {
+  .app {
+    &__inner {
+      max-width: 730px;
+    }
+  }
+
+  .main {
+    min-width: 0px;
+  }
+}
+
+@media only screen and(max-width: 730px) {
+  .app {
+    &__inner {
+      padding-right: 0;
+    }
+  }
+}
+
+@media only screen and(max-width: 600px) {
+  .app {
+    &__inner {
+      gap: 10px;
+      padding-right: 0;
+      padding-left: 0px;
+    }
+  }
+}
+
+@media only screen and(max-width: 500px) {
+  .main{
+    border: none;
   }
 }
