--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -1,3 +1,10 @@
 .footer{
   width: 375px;
+  padding-top: 16px;
+}
+
+@media only screen and(max-width: 960px) {
+  .footer{
+    display: none;
+  }
 }
