--- a/src/Components/HomePageTop/HomePageTop.scss
+++ b/src/Components/HomePageTop/HomePageTop.scss
@@ -3,6 +3,7 @@
 .home__top {
   top: 0;
   position: sticky;
+  z-index: 10;
   right: 0;
   padding: 16px;
   border-bottom: 1px solid $strokeColor-Light;
@@ -14,6 +15,10 @@
     align-items: center;
     justify-content: space-between;
   }
+
+  &--modal{
+    pointer-events: none;
+  }
 }
 
 .home__heading {
@@ -23,7 +28,7 @@
 
 .home__button {
   margin: -10px 0;
-  margin-left: 0;
+  margin-right: -10px;
   padding: 10px;
   color: $primaryColor;
   background-color: transparent;
