--- a/src/Components/Profile/Profile.scss
+++ b/src/Components/Profile/Profile.scss
@@ -4,8 +4,6 @@
   display: flex;
   align-items: center;
   padding: 10px;
-  margin-left: -10px;
-  margin-bottom: -10px;
   border-radius: 30px;
   cursor: pointer;
 
@@ -52,5 +50,21 @@
 
   .profile__user-name {
     color: $shyColor-Dark;
+  }
+}
+
+@media only screen and(max-width: 1200px) {
+  .profile__inner {
+    display: none;
+  }
+
+  .profile {
+    .user-icon.small {
+      margin: 0;
+    }
+
+    .more-small-icon {
+      display: none;
+    }
   }
 }
