Edit responsive styles

--- a/src/App.scss
+++ b/src/App.scss
@@ -107,7 +107,7 @@ img {
   }
 }
 
-@media only screen and(max-width: 600px) {
+@media only screen and(max-width: 600px), (max-height: 520px) {
   .app {
     &__inner {
       gap: 10px;
@@ -118,7 +118,15 @@ img {
 }
 
 @media only screen and(max-width: 500px) {
-  .main{
+  .main {
     border: none;
+  }
+}
+
+@media only screen and(max-height: 520px) {
+  @media only screen and(max-width: 725px) {
+    .main {
+      border: none;
+    }
   }
 }
