--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -107,6 +107,123 @@
   }
 }
 
+@media only screen and(max-height: 520px) {
+  .header {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    z-index: 0;
+    left: 0;
+    display: flex;
+    width: 100%;
+    height: auto;
+    padding: 50px 0;
+    border-top: 1px solid $strokeColor-Light;
+
+    .profile {
+      display: none;
+    }
+
+    .tweet-button {
+      display: block;
+      width: auto;
+      margin: 0 auto;
+      padding: 11px;
+
+      &__text {
+        display: none;
+      }
+
+      .tweet-icon {
+        display: block;
+      }
+    }
+  }
+
+  .header__link {
+    display: none;
+  }
+
+  .app--dark {
+    .header {
+      border-color: $strokeColor-Dark;
+    }
+  }
+
+  @media only screen and(max-width: 100vw) {
+    .header {
+      padding: 5px 0;
+
+      .tweet-button {
+        position: fixed;
+        bottom: 0;
+        transform: translateY(calc(-100% - 20px));
+        right: 10px;
+        width: auto;
+        margin: 0;
+        padding: 16px 24px;
+        display: flex;
+        align-items: center;
+        border-radius: 30px;
+        box-shadow: rgb(136 153 166 / 20%) 0px 0px 10px, rgb(136 153 166 / 25%) 0px 1px 3px 1px;
+
+        &__text {
+          display: block;
+        }
+
+        .tweet-icon {
+          display: block;
+          margin-right: 8px;
+        }
+      }
+    }
+  }
+
+  @media only screen and(max-width: 800px) {
+    .header {
+      .tweet-button {
+        position: fixed;
+        bottom: 0;
+        transform: translateY(calc(-100% - 20px));
+        right: 10px;
+        margin: 0;
+        padding: 16px;
+        border-radius: 50%;
+        box-shadow: rgb(136 153 166 / 20%) 0px 0px 10px, rgb(136 153 166 / 25%) 0px 1px 3px 1px;
+
+        &__text {
+          display: none;
+        }
+
+        .tweet-icon {
+          margin: 0;
+        }
+      }
+    }
+  }
+}
+
+// @media only screen and(max-width: 950px) {
+//   .header {
+//     .tweet-button {
+//       display: block;
+//       width: auto;
+//       margin: 0 auto;
+//       padding: 15px;
+//       border-radius: 50%;
+
+//       &__text {
+//         display: none;
+//       }
+
+//       .tweet-icon {
+//         display: block;
+//         margin: 0;
+//       }
+//     }
+//   }
+// }
+
 @media only screen and(max-width: 500px) {
   .header {
     position: fixed;
