--- a/src/Components/Tweet/Tweet.scss
+++ b/src/Components/Tweet/Tweet.scss
@@ -100,7 +100,17 @@
 }
 
 @media only screen and(max-width: 500px) {
-  .tweet:first-child{
+  .tweet:first-child {
+    border: 0;
+  }
+
+  .tweet__inner {
+    padding: 12px 16px;
+  }
+}
+
+@media only screen and(max-height: 520px) {
+  .tweet:first-child {
     border: 0;
   }
 }
