--- a/src/Components/Tweets/Tweets.scss
+++ b/src/Components/Tweets/Tweets.scss
@@ -3,3 +3,9 @@
   padding: 0;
   list-style-type: none;
 }
+
+@media only screen and(max-width: 500px), (max-height: 520px) {
+  .tweets__list {
+    margin-bottom: 55px;
+  }
+}
