--- a/src/Scss/Variables.scss
+++ b/src/Scss/Variables.scss
@@ -16,6 +16,9 @@ $primaryColor: #1ea1f1;
 $primaryColor-onHover: #1a8cd8;
 $primaryColor-onClick: #177cc0;
 
+$red: #ef1c5c;
+$green: #0cb245;
+
 $box-shadow: rgb(101 119 134 / 20%) 0px 0px 15px, rgb(101 119 134 / 15%) 0px 0px 3px 1px;
 
 @mixin TextHeading {
