--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
+@import "./Scss/Normalize.scss";
 @import "./Scss/Fonts.scss";
 @import "./Scss/Variables.scss";
 
@@ -124,6 +125,12 @@ img {
 }
 
 @media only screen and(max-height: 520px) {
+  .app {
+    &__inner {
+      gap: 30px;
+    }
+  }
+
   @media only screen and(max-width: 725px) {
     .main {
       border: none;
