--- a/src/Components/HomePageTop/HomePageTop.scss
+++ b/src/Components/HomePageTop/HomePageTop.scss
@@ -44,7 +44,7 @@
   }
 
   &:hover {
-    background-color: $cardColor-Light;
+    background-color: $InputColor-Light;
   }
 }
 
@@ -56,7 +56,7 @@
 
   .home__button {
     &:hover {
-      background-color: $cardColor-Dark;
+      background-color: $InputColor-Dark;
     }
   }
 }
