--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -36,7 +36,7 @@
 
   &:hover {
     .nav__link__inner {
-      background-color: $cardColor-Light;
+      background-color: $InputColor-Light;
     }
   }
 
@@ -72,7 +72,7 @@
 
     &:hover {
       .nav__link__inner {
-        background-color: $cardColor-Dark;
+        background-color: $InputColor-Dark;
       }
     }
   }
