--- a/src/Pages/LoginPage/LoginPage.scss
+++ b/src/Pages/LoginPage/LoginPage.scss
@@ -6,6 +6,10 @@
   padding-top: 60px;
 }
 
+.login__logo {
+  margin-bottom: 36px;
+}
+
 .login__heading {
   margin: 0;
   margin-bottom: 36px;
@@ -29,6 +33,7 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
+  color: $textColor-Light;
   border: 1px solid $strokeColor-Light;
   border-radius: 6px;
   outline: none;
@@ -49,18 +54,44 @@
   background-color: $primaryColor;
   color: $bG-Light;
   border-radius: 76px;
+  cursor: pointer;
+  transition: background-color 0.25s ease;
 
-  &:hover{
+  &:hover {
     background-color: $primaryColor-onHover;
   }
 
-  &:active{
+  &:active {
     background-color: $primaryColor-onClick;
+  }
+}
+
+.login__bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.login__bottom__button {
+  padding: 0;
+  font-weight: 400;
+  font-family: inherit;
+  font-size: 18px;
+  line-height: 24px;
+  text-decoration: none;
+  color: $primaryColor;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+
+  &:hover {
+    text-decoration: underline;
   }
 }
 
 .app--dark {
   .login__input {
+    color: $textColor-Dark;
     border-color: $strokeColor-Dark;
     background-color: $InputColor-Dark;
   }
