--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -1,6 +1,17 @@
 .footer{
   width: 375px;
   padding-top: 16px;
+  overflow: auto;
+
+  &::-webkit-scrollbar{
+    width: 0;
+  }
+}
+
+.footer{
+  .footer__input{
+    margin-bottom: 16px;
+  }
 }
 
 @media only screen and(max-width: 960px) {
