Edit localization settings

--- a/src/Components/ProfilePageTop/ProfilePageTop.scss
+++ b/src/Components/ProfilePageTop/ProfilePageTop.scss
@@ -3,7 +3,7 @@
 .profile__top {
   display: flex;
   align-items: center;
-  padding: 16px;
+  padding: 6px 16px;
   border-bottom: 1px solid $strokeColor-Light;
 }
 
@@ -28,7 +28,7 @@
 
 .profile__top__heading {
   margin: 0;
-  margin-bottom: 2px;
+  margin-bottom: 3px;
   @include TextHeadingBold;
 }
 
