--- a/src/Components/ProfileIntro/ProfileIntro.scss
+++ b/src/Components/ProfileIntro/ProfileIntro.scss
@@ -3,16 +3,19 @@
 .profile__banner {
   max-width: 100%;
   width: 100%;
-  height: 210px;
+  height: auto;
   background-color: $cardColor-Light;
   object-fit: scale-down;
 }
 
 .profile__user-avatar {
+  position: relative;
   margin-left: 24px;
-  margin-top: -60px;
+  margin-top: -70px;
   border-radius: 50%;
-  border: 5px solid $bG-Light;
+  box-shadow: 0px 0px 0px 5px $bG-Light;
+  // border: 5px solid $bG-Light;
+  z-index: 9;
 }
 
 .app--dark {
@@ -21,6 +24,6 @@
   }
 
   .profile__user-avatar {
-    border-color: $bG-Dark;
+    box-shadow: 0px 0px 0px 5px $bG-Dark;
   }
 }
