--- a/src/Components/ProfileIntro/ProfileIntro.scss
+++ b/src/Components/ProfileIntro/ProfileIntro.scss
@@ -16,6 +16,7 @@
   box-shadow: 0px 0px 0px 5px $bG-Light;
   // border: 5px solid $bG-Light;
   z-index: 9;
+  object-fit: cover;
 }
 
 .app--dark {
